@@ -16,7 +16,7 @@ metadata_DATA = $(metadata_in_files:.xml.in=.xml)
 noinst_DATA = gnome-translucent.xml.in
 CLEANFILES = gnome-translucent.xml gnome-translucent.xml.in
 
-EXTRA_DIST = $(background_DATA)
+EXTRA_DIST = $(background_DATA) gnome-translucent.xml.in.in
 
 gnome-translucent.xml.in: gnome-translucent.xml.in.in Makefile
 	sed -e 's^\@datadir\@^$(datadir)^g' < gnome-translucent.xml.in.in > gnome-translucent.xml.in.tmp \
